refactor(auth): criação de midlleware, mudança no auth.js e nos controllers
