# swagger.yml
@@ -86,12 +86,8 @@ paths:
       tags:
         - Vagas
       summary: Registro de vagas
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       requestBody:
         required: true
@@ -154,6 +150,8 @@ paths:
       tags:
         - Vagas
       summary: Atualização de vagas
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -161,12 +159,6 @@ paths:
           required: true
           schema:
             type: integer
-
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
 
       requestBody:
         required: true
@@ -184,6 +176,8 @@ paths:
       tags:
         - Vagas
       summary: Deleção de vagas
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -191,12 +185,6 @@ paths:
           required: true
           schema:
             type: integer
-
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
 
       responses:
         204:
@@ -207,12 +195,8 @@ paths:
       tags:
         - Vagas
       summary: Aplicação de vagas
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       requestBody:
         required: true
@@ -267,13 +251,9 @@ paths:
       tags:
         - Usuários
       summary: Buscar usuário por identificador
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: User ID
@@ -288,13 +268,9 @@ paths:
       tags:
         - Usuários
       summary: Deleção de usuários
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: User ID
@@ -309,13 +285,9 @@ paths:
       tags:
         - Usuários
       summary: Atualização de dados da conta
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: Profile ID
@@ -340,13 +312,9 @@ paths:
       tags:
         - Usuários
       summary: Buscar vagas criadas por usuário
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: User ID
@@ -362,13 +330,9 @@ paths:
       tags:
         - Usuários
       summary: Buscar vagas aplicadas por usuário
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: User ID
@@ -454,12 +418,8 @@ paths:
       tags:
         - Perfis
       summary: Registro de perfil
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       requestBody:
         required: true
@@ -496,13 +456,9 @@ paths:
       tags:
         - Perfis
       summary: Deleção de perfis
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: Profile ID
@@ -517,13 +473,9 @@ paths:
       tags:
         - Perfis
       summary: Buscar perfil por identificador
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: Profile ID
@@ -538,13 +490,9 @@ paths:
       tags:
         - Perfis
       summary: Atualização de perfis
+      security:
+        - bearerAuth: []
       parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
-
         - in: path
           name: id
           description: Profile ID
@@ -737,12 +685,8 @@ paths:
       tags:
         - Lista de emails
       summary: Buscar todas as listas
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       responses:
         200:
@@ -752,12 +696,8 @@ paths:
       tags:
         - Lista de emails
       summary: Criar lista de emails
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       requestBody:
         required: true
@@ -780,12 +720,8 @@ paths:
       tags:
         - Lista de emails
       summary: Atualização de status das listas.
-      parameters:
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
+      security:
+        - bearerAuth: []
 
       requestBody:
         required: true
@@ -805,6 +741,8 @@ paths:
       tags:
         - Lista de emails
       summary: Buscar listas por identificador
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -812,12 +750,6 @@ paths:
           required: true
           schema:
             type: integer
-
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
 
       responses:
         200:
@@ -827,6 +759,8 @@ paths:
       tags:
         - Lista de emails
       summary: Atualização de lista de emails
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -834,12 +768,6 @@ paths:
           required: true
           schema:
             type: integer
-
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
 
       requestBody:
         required: true
@@ -861,6 +789,8 @@ paths:
       tags:
         - Lista de emails
       summary: Deleção de listas de emails
+      security:
+        - bearerAuth: []
       parameters:
         - in: path
           name: id
@@ -868,12 +798,6 @@ paths:
           required: true
           schema:
             type: array
-
-        - in: header
-          name: x-access-token
-          schema:
-            type: string
-          required: true
 
       responses:
         200:
@@ -889,3 +813,10 @@ paths:
       responses:
         200:
           description: listas deletadas com sucesso
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
